<resources>
    <string name="app_name">Electronics Device Sale</string>
    <string name="tile_login">Login</string>
    <string name="textview">TextView</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_register">Register</string>
    <string name="confirm_password">Confirm</string>
    <string name="button">Button</string>
</resources>